# learngit

./: .bash_history  .gitconfig  .viminfo
.ssh/: id_rsa  id_rsa.pub
learngit/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_clean.sh  cmake_install.cmake
learngit/conf/: configAll.cfg
learngit/src/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
